# MiddleArch

./: .gitignore  CMakeCache.txt  CmakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake  main.cpp
AndroidDemo/ue4ObjectStudy/app/: CMakeLists.txt  build.gradle
AndroidDemo/ue4ObjectStudy/app/src/main/: AndroidManifest.xml
AndroidDemo/ue4ObjectStudy/app/src/main/assets/: PBRFragment.glsl  PBRVertex.glsl  test.txt
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/: Context.h  native-lib.cpp
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/Android/: AndroidLog.h  native-lib.cpp
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/CoreObject/: PClass.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/File/: Data.cpp  Data.h  File.cpp  File.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/Graph/: ShaderProgram.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/Mesh/: LoadObj.cpp  LoadObj.h  Vector2.h  Vertex.h  algorithm.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/PostProcess/: PassPostProcessAA.cpp  PassPostProcessAA.h  PostProcessParameters.h  RenderingCompositionGraph.cpp  RenderingCompositionGraph.h  TestDAG.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/Sample/: Application.cpp  ApplicationSystem.h  PBRSample.cpp  PBRSample.h
AndroidDemo/ue4ObjectStudy/app/src/main/cpp/SkeletalAnimation/: 3DSHelper.h  3DSLoader.h  Material.h  SmoothingGroups.h  anim.h  camera.h
AndroidDemo/ue4ObjectStudy/app/src/main/res/layout/: activity_main.xml
PlatformDemo/AndroidDemo/ue4ObjectStudy/app/: CMakeLists.txt  build.gradle
PlatformDemo/AndroidDemo/ue4ObjectStudy/app/src/main/: AndroidManifest.xml
PlatformDemo/MacDemo/: CMakeLists.txt
PlatformDemo/MacDemo/MacSource/: main.cpp
Source/: CMakeLists.txt  Common.h  Context.cpp  Context.h  GPUObject.cpp  GPUObject.h  Makefile  Object.cpp  Object.h
Source/CoreObject/: Mutex.cpp  Mutex.h  Object.h  PObject.h  Thread.cpp  Thread.h  Variant.cpp  Variant.h  WorkQueue.cpp  WorkQueue.h
Source/Editor/: CmakeLists.txt  editor.cpp  editor.h
Source/Engine/: PositionVertexBuffer.cpp  PositionVertexBuffer.h
Source/File/: AbstractFile.h  Deserializer.cpp  Deserializer.h  File.cpp  File.h  Serializer.cpp  Serializer.h  XMLFile.cpp
Source/Graph/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  DataStruct.cpp  DataStruct.h  Drawable.cpp  Drawable.h  GLProgram.cpp  GLProgram.hpp  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsImpl.cpp  GraphicsImpl.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  Octree.cpp  Octree.h  OctreeQuery.h  RenderPath.cpp  RenderPath.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderVariation.cpp  ShaderVariation.h  StaticModel.cpp  StaticModel.h  Technique.cpp  Technique.h  Texture.cpp  (+13 more)
Source/Math/: BoundingBox.cpp  BoundingBox.h  CubeBox.cpp  CubeBox.h  Frustum.h  MSphere.cpp  MSphere.h  MathDefs.h  MeshData.h  Plane.cpp  Plane.h
Source/Mesh/: LoadObj.cpp  LoadObj.h  Material.h  Mesh.h  PString.h  SNmath.h  Vector2.h  Vector3.h  Vertex.h  algorithm.h
Source/OpenGLESCase/: CaseShaderProgram.cpp  CaseShaderProgram.h  Deferred.cpp  Deferred.h  FresnelReflection.cpp  FresnelReflection.h  GLProgram.cpp  GLProgram.hpp  GammaCorrection.cpp  GammaCorrection.h  NormalMap.cpp  NormalMap.h  ObjModel.cpp  ObjModel.h  ParallaxMapping.cpp  ParallaxMapping.h  ProductNoramlTexture.cpp  ProductNoramlTexture.h  Rect2D.cpp  Rect2D.h  RectData.h  ShaderStr.cpp  ShaderStr.h  StencilTesting.cpp  StencilTesting.h  Vertex.h
Source/OpenGLESCase/ImageAlgoritm/: BilateralFilter.cpp  BilateralFilter.h
Source/OpenGLESCase/MTRender/: ProduceConsume.h  TestWorkerThread.cpp  TestWorkerThread.h  WorkerThread.cpp  WorkerThread.h
Source/OpenGLESCase/PBR/: GraphPBR.h  PBR_LightingTexture.cpp  PBR_LightingTexture.h  PBR_lighting.cpp  PBR_lighting.h  Sphere.cpp  Sphere.h
Source/OpenGLESCase/ShadowMap/: DataStruct.cpp  DataStruct.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  ShadowMapingDepth.cpp  ShadowMapingDepth.h  VertexBuffer.cpp  VertexBuffer.h
Source/PostProcess/: PooledRenderTarget.h  PostProcessing.cpp  PostProcessing.h  RenderTargets.h  RenderingCompositionGraph.cpp  RenderingCompositionGraph.h  SceneRendering.h
Source/Programs/: CmakeLists.txt  programs.cpp  programs.h
Source/RenderCore/: RenderInterface.h  RenderResource.cpp  RenderResource.h  RenderTarget.h  RendererInterface.h  VertexBuffer.cpp  VertexBuffer.h  VertexStreamComponent.h
Source/Resource/: Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  XMLElement.cpp  XMLElement.h  XMLFile.cpp  XMLFile.h
Source/Runtime/: CmakeLists.txt
Source/Runtime/CoreObject/: Object.cpp  Object.h  PClass.h  PObject.cpp  PObject.h
Source/Sample/: Application.h  ApplicationSystem.cpp  ApplicationSystem.h  DeferredRenderSample.cpp  DeferredRenderSample.h  EngineSample.cpp  FresnelReflectionSample.cpp  GammaCorrectionSample.cpp  GammaCorrectionSample.h  HelloTriangleSample.cpp  HelloTriangleSample.h  MTTestSample.cpp  MTTestSample.h  NormalMapSample.cpp  NormalMapSample.h  ObjSample.cpp  ObjSample.h  PBRLightTextureSample.cpp  PBRSample.cpp  PBRSample.h  ParallaxMappingSample.cpp  ParallaxMappingSample.h  ProductNormalMapSample.cpp  ProductNormalMapSample.h  ShadowMapingDepthSample.cpp  StencilTestingSample.cpp  StencilTestingSample.h  TestDAG.cpp  TestDAG.h  TestRenderCore.cpp  TestRenderCore.h  TestRenderCoreSample.cpp  TestRenderCoreSample.h
Source/Sample/AppSystem/: Application.cpp  ApplicationSystem.cpp  ApplicationSystem.h
Source/Sample/Demo/: BilateralFilterSample.cpp  BilateralFilterSample.h  DeferredRenderSample.h  EngineSample.cpp  EngineSample.h  FresnelReflectionSample.h  MTTestSample.h  NormalMapSample.cpp  ObjSample.cpp  PBRLightTextureSample.cpp  PBRLightTextureSample.h  ShadowMapingDepthSample.h  XMLLoadSample.cpp  XMLLoadSample.h
Source/Scene/: Animatable.cpp  Animatable.h  Component.cpp  Component.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Serializable.cpp  Serializable.h
Source/SkeletalAnimation/: SAtypes.h  light.h
(+56 files in other folders)
